10-site1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staticwebserver
  namespace: yatest
  labels:
    app: staticwebserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: staticwebserver
  template:
    metadata:
      labels:
        app: staticwebserver
    spec:
      containers:
        - name: staticwebserver
          image: git.systementor.se/yacloud/stefanserver
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: staticwebserver-service
  labels:
    app: staticwebserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: staticwebserver
  sessionAffinity: None
