60-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ya
  name: yacloud
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "cloud-backend.chickenkiller.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cloud-backend-service
                port:
                  number: 80
    - host: "cloud-frontend.crabdance.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cloud-frontend-service
                port:
                  number: 80
